force-app/main/default/objects/Documentos_Cliente__c/Documentos_Cliente__c.object-meta.xml
<CustomObject>
    <label>Documentos Cliente</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Nombre del Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentos Cliente</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>