force-app/main/default/objects/Documentos_Cliente__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Documentos Cliente</relationshipLabel>
    <relationshipName>Documentos_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>