force-app/main/default/objects/Documentos_Cliente__c/fields/Nombre_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Documento__c</fullName>
    <label>Nombre de Documento</label>
    <length>150</length>
    <type>Text</type>
</CustomField>