force-app/main/default/objects/Documentos_Cliente__c/fields/Tipo_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Documento__c</fullName>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cédula o Ruc</fullName>
            </value>
            <value>
                <fullName>Poder de Administración</fullName>
            </value>
            <value>
                <fullName>Poder de Representación</fullName>
            </value>
            <value>
                <fullName>Acta de Constitución</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>